@startuml

hide circle

rectangle "Dagplanning Aggregate" {
    class Dagplanning <<AR>> {
        id: Integer
        datum: LocalDate
        voegToe(Vertoning vertoning)
    }

    class Onderdeel <<Value Object>> {
        starttijd: LocalTime
        eindtijd: LocalTime
        overlaptMet(Onderdeel anderOnderdeel): boolean
    }
}

rectangle "Aggregate Film\n" {
    class Vertoning <<AR>> {
        id: Integer
        titel: String
        starttijd: LocalTime
        eindtijd: LocalTime
}

Dagplanning "1" --> " onderdelen *" Onderdeel

Onderdeel "1" --> "vertoning 1" Vertoning

@enduml